--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
 
     <nav class="bottombar">
-      <button onclick="navigate('home')">🏠 Home</button>
+      <button onclick="navigate('account')">👤 Account</button>
       <button onclick="navigate('stats')">📊 Stats</button>
       <button onclick="navigate('rewards')">🎁 Rewards</button>
       <button onclick="navigate('settings')">⚙️ Settings</button>
