--- a/account.html
+++ b/account.html
@@ -1,4 +1,4 @@
-// Katapola Dice Game - Full Website // Tech Stack: Next.js + Tailwind CSS + Firebase (for demo balance) + Telegram Login (OAuth) + Socket.io (for Auto Mode)
+// Katapola Dice Gamee - Full Website // Tech Stack: Next.js + Tailwind CSS + Firebase (for demo balance) + Telegram Login (OAuth) + Socket.io (for Auto Mode)
 
 // ---------------------- // File: package.json { "name": "katapola-dice", "version": "1.0.0", "scripts": { "dev": "next dev", "build": "next build", "start": "next start" }, "dependencies": { "next": "latest", "react": "latest", "react-dom": "latest", "socket.io-client": "latest", "tailwindcss": "latest" } }
 
